# django-pgsync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  TODO  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
django_pgsync/: __init__.py  apps.py  checks.py  conf.py  indexes.py  schema.py  tasks.py
django_pgsync/management/: base.py
django_pgsync/management/commands/: pgsync_bootstrap.py  pgsync_daemon.py  pgsync_pull.py  pgsync_schema.py  pgsync_status.py
example/: README.md
example/bookstore/: models.py  search_indexes.py
example/bookstore/management/commands/: seed_bookstore.py
example/project/: settings.py
scripts/: release.sh
tests/: runtests.py  test_checks.py  test_conf.py  test_indexes.py  test_overrides.py  test_schema.py  test_tasks.py
tests/testapp/: models.py  search_indexes.py
