[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pgsync"
dynamic = ["version"]
description = "Django integration for PGSync: define search indexes from Django models, sync PostgreSQL to Elasticsearch/OpenSearch via change data capture."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tolu Aina", email = "tolu@pgsync.com" }]
keywords = [
    "django",
    "pgsync",
    "elasticsearch",
    "opensearch",
    "postgres",
    "postgresql",
    "search",
    "cdc",
    "change-data-capture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "django>=4.2",
    "pgsync>=7.1.0",
]

[project.optional-dependencies]
celery = ["celery>=5.0"]

[project.urls]
Homepage = "https://pgsync.com"
Repository = "https://github.com/toluaina/django-pgsync"
Issues = "https://github.com/toluaina/django-pgsync/issues"
Changelog = "https://github.com/toluaina/django-pgsync/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "django_pgsync.__version__" }

[tool.setuptools.packages.find]
include = ["django_pgsync*"]

[tool.setuptools.package-data]
django_pgsync = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.ruff.lint.isort]
known-first-party = ["django_pgsync"]
